--- a/BabelScapeInternship/.classpath
+++ b/BabelScapeInternship/.classpath
@@ -27,7 +27,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/babelscape-data-commons-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/commons-beanutils-core-1.7.0.jar"/>
