--- a/BabelScapeInternship/.classpath
+++ b/BabelScapeInternship/.classpath
@@ -27,11 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/babelscape-data-commons-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/commons-beanutils-core-1.7.0.jar"/>
@@ -48,7 +44,6 @@
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/icu4j-56.1.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/jwi-2.2.3.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/lcl-jlt-2.4.jar"/>
-	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/logback-classic-1.2.3.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/logback-core-1.2.3.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/lucene-analyzers-common-7.2.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/lucene-core-7.2.0.jar"/>
@@ -60,7 +55,7 @@
 			<attribute name="javadoc_location" value="jar:file:/home/silvio/Documenti/Tirocinio/BabelNet-API-4.zip!/BabelNet-API-4.0/docs/javadoc"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/jgrapht-1.1.0/lib/jgrapht-demo-1.1.0.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/ejml-0.23.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/javax.json.jar"/>
@@ -76,6 +71,6 @@
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/stanford-corenlp-3.9.1-sources.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/xom.jar"/>
 	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/xom-1.2.10-src.jar"/>
-	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/stanford-corenlp-full-2018-02-27/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="/home/silvio/Documenti/Tirocinio/BabelNet-API-4.0/lib/logback-classic-1.2.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
